--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ homework/Part01/installments_payments.csv
 homework/Part01/POS_CASH_balance.csv
 homework/Part01/previous_application.csv
 homework/Part01/sample_submission.csv
+Day1/Day_001_example_of_metrics.ipynb
+Day1/Day_001_example_of_metrics.ipynb
